--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         </style>
     </head>
     <body>
+        <table id ="myTable">
+        </table>
         <table>
             <tr>
                 <td>
